--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,8 @@
 <body>
     <main>
         <article class="box">
-            <h1>Your Name</h1>
-            <div><a href="mailto:your.email@example.com">your-email@example.com</a></div>
+            <h1>Patrik Hudec</h1>
+            <div><a href="mailto:patrik.hudec@studentambassadors.com">your-email@example.com</a></div>
             
             <section class="box">
                 <h2>
@@ -21,9 +21,8 @@
                     Social media
                 </h2>
                 <ul>
-                    <li><a href="https://github.com/<handle>">@github_handle</a></li>
-                    <li><a href="https://linkedin.com/in/<handle>">@linkedin_handle</a></li>
-                    <li><a href="https://twitter.com/<handle>">@twitter_handle</a></li>
+                    <li><a href="https://github.com/ItsPatrikus">@ItsPatrikus</a></li>
+                    <li><a href="https://www.linkedin.com/in/patrik-hudec/">@patrik-hudec</a></li>
                 </ul>    
             </section>
             
